[package]
name = "rec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "debug", "derive", "env", "string"] }
regex = { version = "1.10.4", features = ["logging", "pattern"] }
rusty_ffmpeg = { version = "0.14.1", features = ["ffmpeg7", "link_system_ffmpeg"] }
serde = { version = "1.0.202", features = ["rc", "serde_derive", "derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
